# shiny-ui-kit

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.MD  app.py  pyproject.toml  run.py
.claude/skills/add-component/: SKILL.md
.github/workflows/: ci.yml
auth/: __init__.py  oauth_handler.py  session_manager.py  starlette_routes.py
components/: __init__.py  accounts.py  component_selector.py  home.py  identities.py  login.py  registry.py  search.py
config/: logging_config.py  settings.py
docs/: ADDING_COMPONENTS.md  ARCHITECTURE.md  CODEBASE_ANALYSIS.md  DEPLOYMENT.md  SETUP.md  USER_GUIDE.md  oauth_flow.puml
isc/: __init__.py  client.py  oauth_client.py
tests/: test_client.py  test_oauth.py  test_registry.py  test_session_manager.py  test_settings.py
ui/: components.py  styles.css  theme.py
